@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultTextAlignment center
skinparam dpi 150
skinparam class {
    BackgroundColor #FFFFFF
    ArrowColor #000000
    BorderColor #000000
    FontSize 11
}

title Diagrama de Clases - Juego de Cartas

enum Palo {
  Corazones
  Diamantes
  Tréboles
  Picas
}

class Carta {
  - valor : int
  - palo : Palo
  - bocaArriba : bool
  + Carta(valor, palo, bocaArriba)
  + aTexto()
  + obtenerColor()
}

class Baraja {
  - cartas : vector<Carta>
  + Baraja()
  + barajar()
  + estaVacia()
  + robar()
  + ponerAbajo(carta)
  + tamano()
}

class Tablero {
  - columnas : vector<vector<Carta>>
  - fundaciones : vector<vector<Carta>>
  - descarte : vector<Carta>
  - baraja : Baraja
  + Tablero()
  + repartir()
  + moverColumnaAColumna()
  + moverColumnaAFundacion()
  + moverDescarteAColumna()
  + moverDescarteAFundacion()
  + comprobarVictoria()
  + robarDeLaBaraja()
  + reciclarDescarte()
}

class Juego {
  - tablero : Tablero
  - columnaSeleccionada : int
  - filaSeleccionada : int
  - estaSeleccionando : bool
  - columnaOrigen : int
  - filaOrigen : int
  - mensaje : string
  - victoria : bool
  - fuente : Fuente
  - texturasDeCartas : map<string, Textura>
  + Juego()
  + reiniciar()
  + dibujar(ventana)
  + manejarEntrada(tecla)
}

class Fuente
class Textura
class Ventana
class Tecla

Carta --> Palo : usa
Baraja *-- Carta : tiene
Tablero *-- Baraja : tiene
Tablero --* Carta : tiene
Juego --* Tablero : tiene
Juego --> Fuente : usa
Juego --> Textura : usa
Juego --> Ventana : usa
Juego --> Tecla : usa
@enduml
